--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -63,6 +65,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tech-stack-icons": "^3.3.2",
     "vaul": "^0.9.9",
+    "wowjs": "^1.1.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
